<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="140dp">

    <TextView
        android:id="@+id/Fecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Fecha" />

    <TextView
        android:id="@+id/Estacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@+id/Fecha"
        app:layout_constraintTop_toBottomOf="@+id/Fecha"
        tools:text="Estacion" />

    <TextView
        android:id="@+id/Precio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/ImporteTotal"
        app:layout_constraintTop_toTopOf="@+id/TipoCombustible"
        tools:text="Precio" />

    <TextView
        android:id="@+id/TipoCombustible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@+id/Estacion"
        app:layout_constraintTop_toBottomOf="@+id/Estacion"
        tools:text="Tipo de Combustible" />

    <TextView
        android:id="@+id/ImporteTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/Cantidad"
        app:layout_constraintTop_toTopOf="@+id/Estacion"
        tools:text="Importe total" />

    <TextView
        android:id="@+id/Cantidad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toEndOf="@+id/Fecha"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Cantidad" />

    <ImageButton
        android:id="@+id/btnEliminar"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/delete_pay_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_delete" />

</androidx.constraintlayout.widget.ConstraintLayout>